# lokascript

./: .eslintrc.json  .gitignore  .mcp.json  ADDCOMMAND_FEATURE_RESTORATION_COMPLETE.md  ARCHITECTURE_NOTE_LEGACY_ENHANCED.md  BEHAVIOR-FEATURE-COMPLETE.md  CHANGELOG.md  CHANGELOG_GUIDELINES.md  CHANGELOG_PROTECTION.md  CLAUDE.md  COMMAND_COMPATIBILITY_SESSION_SUMMARY.md  CONDITIONAL_TYPES_SUMMARY.md  CONSOLIDATION_COMPLETE_V2.md  CONTRIBUTING.md  COOKBOOK_COMPLETE_RESOLUTION.md  COOKBOOK_CRASH_INVESTIGATION.md  COOKBOOK_CRASH_ROOT_CAUSE.md  COOKBOOK_PERFORMANCE_ANALYSIS.md  DEBUGGING_IMPROVEMENTS.md  DEF_FEATURE_FINAL_SESSION_SUMMARY.md  DEF_FEATURE_PROGRESS_UPDATE.md  DEF_FEATURE_SESSION_SUMMARY.md  DRAGGABLE_BEHAVIOR_FIX_COMPLETE.md  EVENT_SOURCE_INTEGRATION_ANALYSIS.md  GALLERY_FIX_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  LOCAL_VARIABLE_SCOPING_BUG.md  LOKASCRIPT_REBRAND_ASSESSMENT.md  MAINTENANCE.md  MEASURE_COMMAND_FIX_SUMMARY.md  MIGRATION.md  NPM_ORG_SETUP.md  OR_SYNTAX_IMPLEMENTATION.md  PATTERN_TESTING_QUICKSTART.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_PROGRESS_REPORT.md  PHASE_3_SUMMARY.md  PLAN-siren.md  (+69 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
cookbook/: README.md  complete-demo.html  crash-test-minimal.html  crash-test-test7-breakdown.html  full-cookbook-test.html  test-target-functionality.html
docs/: LOCAL_VARIABLES_GUIDE.md  PUBLISHING-READINESS-PLAN.md  README.md  REPOSITORY_PROTECTION_FLOW.md  REPOSITORY_RULESET_QUICKSTART.md  exports-guide.md  wishlist.md
docs-internal/: LINT_TYPECHECK_IMPROVEMENTS.md  MAINTENANCE.md  PARSER_FIX_STATUS.md  README.md  TECHNICAL_DEBT.md  TEST_FAILURES_PLAN.md  WORKFLOW_ANALYSIS.md
examples/: README.md  bundle-loader.js  bundle-selector.js  debug-panel.js  gallery.css  index.html  prism-loader.js
mcp-server-hyperscript/: README.md  package.json
roadmap/: AOP-loop-syntax.md  AOP-loop-syntax.txt  GALLERY_REMAINING_ISSUES.md  (+34 more)
roadmap/napi-rs-patterns/examples/: Cargo.toml  integration.ts  tokenizer-native.rs
(+452 files in other folders)
