# Example Cargo.toml for HyperFixi native core
#
# This shows the project structure for building native Node.js bindings
# using napi-rs.

[package]
name = "hyperfixi-native"
version = "0.1.0"
edition = "2021"
description = "Native performance core for HyperFixi hyperscript implementation"
license = "MIT"
repository = "https://github.com/hyperfixi/hyperfixi"

# Required for napi-rs
[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs core with common features
napi = { version = "2", default-features = false, features = [
    "async",           # Async/await support
    "napi8",           # Node-API version 8
    "serde-json",      # JSON serialization
] }
napi-derive = "2"

# Performance utilities
dashmap = "5"          # Concurrent hash maps for caching
once_cell = "1"        # Lazy static initialization
parking_lot = "0.12"   # Fast synchronization primitives

# Optional: for WASM target
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[build-dependencies]
napi-build = "2"

[profile.release]
# Optimize for size and speed
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Development profile with some optimization
[profile.dev]
opt-level = 1

# Platform-specific configurations for cross-compilation
# These are used by @napi-rs/cli during build

[package.metadata.napi]
name = "hyperfixi-native"

[package.metadata.napi.targets]
# Tier 1: Primary platforms (full support)
aarch64-apple-darwin = true      # macOS ARM64 (M1/M2)
x86_64-apple-darwin = true       # macOS Intel
x86_64-unknown-linux-gnu = true  # Linux x64 (glibc)
x86_64-pc-windows-msvc = true    # Windows x64

# Tier 2: Secondary platforms (tested)
aarch64-unknown-linux-gnu = true # Linux ARM64
x86_64-unknown-linux-musl = true # Linux x64 (musl/Alpine)

# Tier 3: Community supported
# aarch64-linux-android = true   # Android ARM64
# armv7-linux-androideabi = true # Android ARM32
